--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -10,9 +10,7 @@
     "\n",
     "Welcome to the first project of the Machine Learning Engineer Nanodegree! In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'Implementation'** in the header indicate that the following block of code will require additional functionality which you must provide. Instructions will be provided for each section and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully!\n",
     "\n",
-    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.  \n",
-    "\n",
-    ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut. In addition, Markdown cells can be edited by typically double-clicking the cell to enter edit mode."
+    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.  "
    ]
   },
   {
@@ -154,11 +152,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Intuitively, I would expect an increase in the average number of rooms (`RM`) to increase the value of `MEDV`, given that more rooms, on average, indicate larger houses and properties, which typically to cost more, all things being equal.\n",
+    "**Answer: Intuitively, I would expect an increase in the average number of rooms (`RM`) to increase the value of `MEDV`, given that more rooms, on average, indicate larger houses and properties, which typically to cost more, all things being equal.**\n",
     "\n",
-    "I would expect an increase in the percentage of homeowners considered \"lower class\" (`LSTAT`) to decrease the value of `MEDV`, given that poorer (lower class) homeowners tend to own less expensive houses -- and more expensive houses and properties, furthermore, tend to cluster together in the same neighborhoods.\n",
+    "**I would expect an increase in the percentage of homeowners considered \"lower class\" (`LSTAT`) to decrease the value of `MEDV`, given that poorer (lower class) homeowners tend to own less expensive houses -- and more expensive houses and properties, furthermore, tend to cluster together in the same neighborhoods.**\n",
     "\n",
-    "I would expect that an increase in the ratio of students to teachers in schools (`PTRATIO`) to decrease the value of `MEDV`, as good schools tend to have smaller student to teacher ratios, and schools are typically good if they are adequately funded by local property taxes, which would indicate richer neighborhoods (with richer people tending to buy more expensive housing)."
+    "**I would expect that an increase in the ratio of students to teachers in schools (`PTRATIO`) to decrease the value of `MEDV`, as good schools tend to have smaller student to teacher ratios, and schools are typically good if they are adequately funded by local property taxes, which would indicate richer neighborhoods (with richer people tending to buy more expensive housing).**"
    ]
   },
   {
@@ -259,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** I would consider this model to have successfully captured the variation in the target variable.  An $R^2$ of 0.936 is quite high (very close to 1, the maximum value), and indicates that 93.6% of the variance in the true value is successfully predicted by this model, with very little error."
+    "**Answer: I would consider this model to have successfully captured the variation in the target variable.  An $R^2$ of 0.936 is quite high (very close to 1, the maximum value), and indicates that 93.6% of the variance in the true value is successfully predicted by this model, with very little error.**"
    ]
   },
   {
@@ -315,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** The benefit of splitting a dataset into training and testing subsets is generally that it prevents overfitting: if the data perfectly fits the training set, but performs poorly on the test set, then it is too sensitive to random fluctuations in the training data, and generalizes poorly to the test data (and, most likely, other similar data)."
+    "**Answer: The benefit of splitting a dataset into training and testing subsets is generally that it prevents overfitting: if the data perfectly fits the training set, but performs poorly on the test set, then it is too sensitive to random fluctuations in the training data, and generalizes poorly to the test data (and, most likely, other similar data).**"
    ]
   },
   {
@@ -378,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Overall, the graph at `max_depth = 3`, which has a maximum depth of 3, appears to be converging at a fairly high score as more training points are added.  Initially, the training score decreases slightly.  The testing score, at first, sharply increases, and then continues to increase gradually until it coverges on a score close to 0.8.  As both scores appear to have converged at their respecive values well before the maximum number of training points plotted above, it does not appear that more training points would significnatly benefit the model."
+    "**Answer: Overall, the graph at `max_depth = 3`, which has a maximum depth of 3, appears to be converging at a fairly high score as more training points are added.  Initially, the training score decreases slightly.  The testing score, at first, sharply increases, and then continues to increase gradually until it coverges on a score close to 0.8.  As both scores appear to have converged at their respecive values well before the maximum number of training points plotted above, it does not appear that more training points would significnatly benefit the model.**"
    ]
   },
   {
@@ -426,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** At a maximum depth of 1, the model suffers from high bias, as can be seen in the low training score (just above 0.4).  When the model is trained with a maximum depth of 10, it suffers from high variance: the training score is very high, close to 1.0, indicaing that it is modeling the training data very well.  However, the validation score is fairly low (around 6.5-7), and is in fact decreasing as maximum depth increases, suggesting that the model is too sensitive to random fluctuations in the training data, and is modeling the test data poorly as a result."
+    "**Answer: At a maximum depth of 1, the model suffers from high bias, as can be seen in the low training score (just above 0.4).  When the model is trained with a maximum depth of 10, it suffers from high variance: the training score is very high, close to 1.0, indicaing that it is modeling the training data very well.  However, the validation score is fairly low (around 6.5-7), and is in fact decreasing as maximum depth increases, suggesting that the model is too sensitive to random fluctuations in the training data, and is modeling the test data poorly as a result.**"
    ]
   },
   {
@@ -444,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** The optimal maximum depth appears to be about 3 (or slightly higher).  In the graph above, it can be seen that after that point, while the training score continues to rise, the validation score stays stable, and then begins to decrease after a maximum depth of 4.  This suggests that after a maximum depth of about 3, the model is overfitting the training data."
+    "**Answer: The optimal maximum depth appears to be about 3 (or slightly higher).  In the graph above, it can be seen that after that point, while the training score continues to rise, the validation score stays stable, and then begins to decrease after a maximum depth of 4.  This suggests that after a maximum depth of about 3, the model is overfitting the training data.**"
    ]
   },
   {
@@ -472,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** The Grid Search technique goes through a set of pre-specified parameters for fitting a particular machine learning algorithm, fitting a model with each combination of parameters to a given set of data.  The technique returns the parameters which maximize/optimize the (pre-specified) performance metric.  For example, the technique may be used to obtimize the optimal maximum depth of a decision tree model, or the optimum gamma value for a particular SVM kernel."
+    "**Answer: The Grid Search technique goes through a set of pre-specified parameters for fitting a particular machine learning algorithm, fitting a model with each combination of parameters to a given set of data.  The technique returns the parameters which maximize/optimize the (pre-specified) performance metric.  For example, the technique may be used to obtimize the optimal maximum depth of a decision tree model, or the optimum gamma value for a particular SVM kernel.**"
    ]
   },
   {
@@ -494,9 +492,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** In k-fold cross-validation, the data is split into `k` subsets.  The model is then fit `k` times, with each subset being used once as the test subset, with the rest being used together as training data.  In the end, the technique returns the average error across the `k` trials.\n",
+    "**Answer: In k-fold cross-validation, the data is split into `k` subsets.  The model is then fit `k` times, with each subset being used once as the test subset, with the rest being used together as training data.  In the end, the technique returns the average error across the `k` trials.**\n",
     "\n",
-    "The benefit this technique provides for grid search is that it makes it more likely that the success of a particular set of parameters is not due to the particular choice or idiosyncracies of the test and training sets."
+    "**The benefit this technique provides for grid search is that it makes it more likely that the success of a particular set of parameters is not due to the particular choice or idiosyncracies of the test and training sets, in part because each data point is then included in the test (or training) data.  Further, it is particularly useful for small datasets, as it increases the amount of data that can be used for test or training.**"
    ]
   },
   {
@@ -610,7 +608,7 @@
    "source": [
     "** Hint: ** The answer comes from the output of the code snipped above.\n",
     "\n",
-    "**Answer:** The optimal model has max_depth of 4, which closely corresponds to my guess in Question 6.  Judging from the graph, there is no penalty going from 3 to 4 by way of validation score, but the model performs slightly better on the training set at a maximum depth of 4."
+    "**Answer: The optimal model has max_depth of 4, which closely corresponds to my guess in Question 6.  Judging from the graph, there is no penalty going from 3 to 4 by way of validation score, but the model performs slightly better on the training set at a maximum depth of 4.**"
    ]
   },
   {
@@ -664,9 +662,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** I would recommend that Client 1 sell their home at about \\$400,000, that Client 2 sell their home at about \\$235,000, and that Client 3 sell their home at about \\$930,000.\n",
+    "**Answer: I would recommend that Client 1 sell their home at just over \\$400,000, that Client 2 sell their home at just over \\$235,000, and that Client 3 sell their home at just over \\$930,000.**\n",
     "\n",
-    "These prices, relative to one another, appear to make sense: the client with the most expensive house has the most rooms, the lowest poverty level, and the lowest nearby student-to-teacher ratio.  The client with the least expensive house, in contrast, has the fewest rooms, the highest neighborhood poverty level, and also the highest nearty student-to-teacher ratio."
+    "**These prices, relative to one another, appear to make sense: the client with the most expensive house has the most rooms, the lowest poverty level, and the lowest nearby student-to-teacher ratio.  The client with the least expensive house, in contrast, has the fewest rooms, the highest neighborhood poverty level, and also the highest nearty student-to-teacher ratio.**"
    ]
   },
   {
@@ -727,21 +725,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** It's unclear how applicable this model would be today, or in general.  The predicted prices are all within about $30,000 of each other (roughly 5-10% of the predicted selling price of the optimized model), which may be an acceptable margin of error with respect to the model itself.  Assuming this is an acceptable margin of error, then, the model itself makes fairly consistent predictions.\n",
+    "**Answer: It's unclear how applicable this model would be today, or in general.  The predicted prices are all within about $30,000 of each other (roughly 5-10% of the predicted selling price of the optimized model), which may be an acceptable margin of error with respect to the model itself.  Assuming this is an acceptable margin of error, then, the model itself makes fairly consistent predictions.**\n",
     "\n",
-    "However, it's unclear how relevant data collected in 1978 is.  It is possible to adjust these prices for inflation, which however would also increase the magnitude of the margin of error in current-day dollars.  More problematically, many neighborhoods would be expected to have changed significantly since that time, and in the Boston area specifically, [many neighborhoods have become increasingly gentrified](http://www.governing.com/gov-data/boston-gentrification-maps-demographic-data.html) (i.e., formerly poor neighborhoods may no longer be so, as cities become more attractive places to live).  Changes in local transportation may have likewise altered how attractive a particular neighborhood is, as a place to live.\n",
+    "**However, it's unclear how relevant data collected in 1978 is.  It is possible to adjust these prices for inflation, which however would also increase the magnitude of the margin of error in current-day dollars.  More problematically, many neighborhoods would be expected to have changed significantly since that time, and in the Boston area specifically, [many neighborhoods have become increasingly gentrified](http://www.governing.com/gov-data/boston-gentrification-maps-demographic-data.html) (i.e., formerly poor neighborhoods may no longer be so, as cities become more attractive places to live).  Changes in local transportation may have likewise altered how attractive a particular neighborhood is, as a place to live.**\n",
     "\n",
-    "Second, the features present in the data are likely not sufficient to describe a particular home.  It is common to find some variety in property sizes, or old a house is, in any given neighborhood, which would affect its selling price.  New or high-quality appliances in the home, recent renovations, the presence of a basement or attic, a larger property area, the presence of a pool, or proximity to public transportation and attractions, would likely increase the selling price.\n",
+    "**Second, the features present in the data are likely not sufficient to describe a particular home.  It is common to find some variety in property sizes, or old a house is, in any given neighborhood, which would affect its selling price.  New or high-quality appliances in the home, recent renovations, the presence of a basement or attic, a larger property area, the presence of a pool, or proximity to public transportation and attractions, would likely increase the selling price.**\n",
     "\n",
-    "I would expect that most of the predictors would also be applicable in a rural setting.  The number of rooms and social class of the neighborhood should apply similarly, though the degree to which they would (e.g., by how much exactly an extra room might increase selling price) might vary.  However, I would expect the student to teacher ratio to be less predictive in rural areas.  In urban areas, a low student to teacher ratio often reflects more school funds, and greater property taxes.  In contrast, in rural areas, it might simply reflect low population density.  I would, however, expect this model to be reasonably applicable in other urban areas similar to Boston."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \n",
-    "**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
+    "**I would expect that most of the predictors would also be applicable in a rural setting.  The number of rooms and social class of the neighborhood should apply similarly, though the degree to which they would (e.g., by how much exactly an extra room might increase selling price) might vary.  However, I would expect the student to teacher ratio to be less predictive in rural areas.  In urban areas, a low student to teacher ratio often reflects more school funds, and greater property taxes.  In contrast, in rural areas, it might simply reflect low population density.  I would, however, expect this model to be reasonably applicable in other urban areas similar to Boston.**"
    ]
   }
  ],
