--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -376,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: Overall, the graph at `max_depth = 3`, which has a maximum depth of 3, appears to be converging at a fairly high score as more training points are added.  Initially, the training score decreases slightly.  The testing score, at first, sharply increases, and then continues to increase gradually until it coverges on a score close to 0.8.  As both scores appear to have converged at their respecive values well before the maximum number of training points plotted above, it does not appear that more training points would significnatly benefit the model.**"
+    "**Answer: Overall, the graph at `max_depth = 3`, which has a maximum depth of 3, appears to be converging at a fairly high score as more training points are added.  Initially, the training score decreases slightly.  The testing score, at first, sharply increases, and then continues to increase gradually until it coverges on a score close to 0.8.  As both scores, for all maximum depths, appear to have converged at their respecive values well before the maximum number of training points plotted above, it does not appear that more training points would significnatly benefit the model.**"
    ]
   },
   {
