--- a/customer-segments/customer_segments.ipynb
+++ b/customer-segments/customer_segments.ipynb
@@ -1794,7 +1794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: There are data pointw which are outliers for more than one feature: 65, 66, 75, 128, and 154.  Normally, I would examine the data points in more detail to determine why they were outliers, and if the data was indeed anomalous, or whether excluding it would remove more signal than noise.  Here, I have very little information about the sources of the various data points, so I cannot evaluate this.  To avoid cutting out all data numerically anomalous, I will cut out all data anomalous in more than one category.**"
+    "**Answer: There are data points which are outliers for more than one feature: 65, 66, 75, 128, and 154.  Normally, I would examine the data points in more detail to determine why they were outliers, and if the data was indeed anomalous, or whether excluding it would remove more signal than noise.  Here, I have very little information about the sources of the various data points, so I cannot evaluate this.  To avoid cutting out all data numerically anomalous, I will cut out all data anomalous in more than one category.**"
    ]
   },
   {
