customer segments project

--- a/customer-segments/customer_segments.ipynb
+++ b/customer-segments/customer_segments.ipynb
@@ -1865,12 +1865,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The first and second principal component explain about 70% of the variance in the data.  The first four together explain about 93% of the variance.**\n",
+    "**Answer: The first and second principal component explain about 70% of the variance in the data.  The first four together explain about 93% of the variance.  Although they do not explain much of the positive in milk and grocery purchases**\n",
     "\n",
-    "* **The 1st dimension accounts for much of the negative variance in Detergents/Paper, and to a lesser degree Milk and Grocery.  It accounts for some negative variance in the Delicatessen feature, and some positive variance in Fresh and Frizen.  It explains about 44% of the total variance in the data.  **\n",
-    "* **The 2nd dimension accounts for much of the negative variance in Fresh, Frozen, and Delicatessen, and a small amount of the negative variance in the remaining features.  It explains about 26% of the total variance in the data.**\n",
-    "* **The 3rd dimension accounts for much of the negative and positive variance in Fresh and Delicatessen, respectively, and a smaller amount of positive and negative variance in Frozen and Detergents/Paper, respectively.  It explains about 12% of the total variance in the data.**\n",
-    "* **The 4th dimension accounts for much of the positive and negative variance in Frozen and Delicatessen, respectively, and a smaller amount of negative and positive variance in Fresh and Detergents/Paper, respectively.  It explains about 10% of the total variance in the data.**"
+    "* **The 1st dimension accounts for much of the negative variance in Detergents/Paper, and to a lesser degree Milk and Grocery.  It accounts for some negative variance in the Delicatessen feature, and some positive variance in Fresh and Frozen.  It explains about 44% of the total variance in the data.  Overall, it primarily represents decreased spending on Detergets/Paper, Milk, and Grocery.**\n",
+    "* **The 2nd dimension accounts for much of the negative variance in Fresh, Frozen, and Delicatessen, and a small amount of the negative variance in the remaining features.  It explains about 26% of the total variance in the data.  Overall, it primarily represents decreased spending in Fresh, Frozen, and Delicatessen.**\n",
+    "* **The 3rd dimension accounts for much of the negative and positive variance in Fresh and Delicatessen, respectively, and a smaller amount of positive and negative variance in Frozen and Detergents/Paper, respectively.  It explains about 12% of the total variance in the data.  Overall, it mainly represents decreased spending in Fresh, and increased spending in Frozen and Delicatessen (to a lesser extent, decreased spending in Detergents/Paper).**\n",
+    "* **The 4th dimension accounts for much of the positive and negative variance in Frozen and Delicatessen, respectively, and a smaller amount of negative and positive variance in Fresh and Detergents/Paper, respectively.  It explains about 10% of the total variance in the data.  Mainly, it represents increased spending in Frozen, and decreased spending in Delicatessen.**"
    ]
   },
   {
@@ -1880,6 +1880,13 @@
     "### Observation\n",
     "Run the code below to see how the log-transformed sample data has changed after having a PCA transformation applied to it in six dimensions. Observe the numerical value for the first four dimensions of the sample points. Consider if this is consistent with your initial interpretation of the sample points."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2456,7 +2463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: Those customers that depend most on delivery of fresh produce are likely to be more inconvenienced by a decrease in available delivery days, as fresh produce spoils more rapidly than other products, including milk products.  Customers that depend most on non-perishable goods, such as paper/detergents, or whose preferred perishable goods have a longer shelf life, may be less negatively affected by such a change.  Therefore, cluster 0 may be more likely to react negatively to this change.  The company may be able to test this by making the change for a small random selection of customers in both clusters, and confirming whether the change causes any difficulty for either group, and/or more difficulty for one group than other.**"
+    "**Answer: Those customers that depend most on delivery of fresh produce are likely to be more inconvenienced by a decrease in available delivery days, as fresh produce spoils more rapidly than other products, including milk products.  Customers that depend most on non-perishable goods, such as paper/detergents, or whose preferred perishable goods have a longer shelf life, may be less negatively affected by such a change.  Therefore, cluster 0 may be more likely to react negatively to this change.  The company may be able to test this by making a small random selection of customers in both clusters, making the change for only some customers in those selections, and confirming whether the change causes any difficulty for either group, and/or more difficulty for one group than other.**"
    ]
   },
   {
